--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "spryker/product": "^6.0.0",
         "spryker/product-configuration-extension": "^0.1.1",
         "spryker/propel-orm": "^1.5.0",
+        "spryker/quote-request-extension": "^1.1.0",
         "spryker/store": "^1.4.0",
         "spryker/util-encoding": "^2.1.0",
         "spryker/util-text": "^1.3.0"
@@ -29,6 +30,7 @@
     "require-dev": {
         "spryker/code-sniffer": "*",
         "spryker/propel": "*",
+        "spryker/quote-request": "*",
         "spryker/testify": "*"
     },
     "autoload": {
