--- a/tests/SprykerTest/Zed/ProductConfiguration/codeception.yml
+++ b/tests/SprykerTest/Zed/ProductConfiguration/codeception.yml
@@ -26,3 +26,4 @@ suites:
                 - \SprykerTest\Shared\Testify\Helper\DataCleanupHelper
                 - \SprykerTest\Shared\Product\Helper\ProductDataHelper
                 - \SprykerTest\Shared\ProductConfiguration\Helper\ProductConfigurationHelper
+                - \SprykerTest\Shared\QuoteRequest\Helper\QuoteRequestHelper
