--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,6 @@
     "require": {
         "php": ">=7.3",
         "psr/http-message": "^1.0.0",
-        "spryker/availability-cart-connector-extension": "^1.0.0",
-        "spryker/availability-extension": "^1.1.0",
-        "spryker/cart-extension": "^4.2.0",
-        "spryker/checkout-extension": "^1.2.0",
         "spryker/checksum-generator": "^1.0.0",
         "spryker/currency": "^3.2.0",
         "spryker/customer": "^7.0.0",
@@ -18,19 +14,21 @@
         "spryker/locale": "^3.0.0",
         "spryker/log": "^3.7.0",
         "spryker/price": "^5.6.0",
-        "spryker/price-cart-connector-extension": "^1.1.0",
+        "spryker/price-product": "^4.0.0",
+        "spryker/price-product-extension": "^1.2.0",
+        "spryker/price-product-volume": "^3.0.0",
         "spryker/product": "^6.0.0",
-        "spryker/product-configuration-extension": "^0.1.1",
+        "spryker/product-configuration-extension": "^0.2.0",
         "spryker/propel-orm": "^1.5.0",
-        "spryker/quote-request-extension": "^1.1.0",
         "spryker/store": "^1.4.0",
+        "spryker/symfony": "^3.0.0",
+        "spryker/transfer": "^3.25.0",
         "spryker/util-encoding": "^2.1.0",
         "spryker/util-text": "^1.3.0"
     },
     "require-dev": {
         "spryker/code-sniffer": "*",
         "spryker/propel": "*",
-        "spryker/quote-request": "*",
         "spryker/testify": "*"
     },
     "autoload": {
