CC-12637: Support configurable products in the wish list. (#8644)
CC-12637 Support configurable products in the wish list

--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     "require-dev": {
         "spryker/code-sniffer": "*",
         "spryker/propel": "*",
+        "spryker/session": "*",
         "spryker/testify": "*"
     },
     "autoload": {
