--- a/tests/SprykerTest/Client/ProductConfiguration/codeception.yml
+++ b/tests/SprykerTest/Client/ProductConfiguration/codeception.yml
@@ -23,3 +23,4 @@ suites:
                 - \SprykerTest\Shared\Testify\Helper\LocatorHelper
                 - \SprykerTest\Shared\Testify\Helper\DependencyHelper
                 - \SprykerTest\Client\Testify\Helper\ClientHelper
+                - \SprykerTest\Shared\Session\Helper\SessionHelper
