--- a/codeception.yml
+++ b/codeception.yml
@@ -5,7 +5,7 @@ include:
     - tests/SprykerTest/Service/ProductConfiguration
 paths:
     tests: tests
-    log: tests/_output
+    output: tests/_output
     data: tests/_data
     support: tests/_support
     envs: tests/_envs
