--- a/composer.json
+++ b/composer.json
@@ -18,16 +18,18 @@
         "spryker/price-product-extension": "^1.2.0",
         "spryker/price-product-volume": "^3.0.0",
         "spryker/product": "^6.0.0",
-        "spryker/product-configuration-extension": "^0.2.0",
+        "spryker/product-configuration-extension": "^1.0.0",
         "spryker/propel-orm": "^1.5.0",
         "spryker/store": "^1.4.0",
         "spryker/symfony": "^3.0.0",
         "spryker/transfer": "^3.25.0",
         "spryker/util-encoding": "^2.1.0",
-        "spryker/util-text": "^1.3.0"
+        "spryker/util-text": "^1.3.0",
+        "spryker/uuid-behavior": "^1.3.0"
     },
     "require-dev": {
         "spryker/code-sniffer": "*",
+        "spryker/container": "^1.4.0",
         "spryker/propel": "*",
         "spryker/session": "*",
         "spryker/testify": "*"
@@ -46,8 +48,8 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
-        "cs-check": "phpcs -p -s --standard=vendor/spryker/code-sniffer/Spryker/ruleset.xml src/ tests/",
-        "cs-fix": "phpcbf -p --standard=vendor/spryker/code-sniffer/Spryker/ruleset.xml src/ tests/"
+        "cs-check": "phpcs -p -s --standard=vendor/spryker/code-sniffer/SprykerStrict/ruleset.xml src/ tests/",
+        "cs-fix": "phpcbf -p --standard=vendor/spryker/code-sniffer/SprykerStrict/ruleset.xml src/ tests/"
     },
     "extra": {
         "branch-alias": {
