--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,11 @@
         "php": ">=8.0",
         "psr/http-message": "^1.0.0",
         "spryker/checksum-generator": "^1.0.0",
-        "spryker/currency": "^3.2.0",
+        "spryker/currency": "^3.2.0 || ^4.0.0",
         "spryker/customer": "^7.0.0",
         "spryker/guzzle": "^2.2.0",
         "spryker/kernel": "^3.30.0",
-        "spryker/locale": "^3.0.0",
+        "spryker/locale": "^3.0.0 || ^4.0.0",
         "spryker/log": "^3.7.0",
         "spryker/price": "^5.6.0",
         "spryker/price-product": "^4.0.0",
@@ -32,6 +32,9 @@
         "spryker/container": "^1.4.0",
         "spryker/propel": "*",
         "spryker/session": "*",
+        "spryker/storage": "*",
+        "spryker/store-extension": "*",
+        "spryker/store-storage": "*",
         "spryker/testify": "*"
     },
     "autoload": {
